Use HTTPS as the base url protocol
This will resolve the https loading issue

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:            'I am a networkphiliac'
 description:    "This is where I post networking-related projects and hobbies"
 picture:        'assets/img/profile.png'
 locale:         en_US
-url:            http://www.wlchrist.com
+url:            https://www.wlchrist.com
 
 
 # Jekyll
